--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,17 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- Mockito libraries -->
+<!-- 		<dependency> -->
+<!-- 		    <groupId>org.mockito</groupId> -->
+<!-- 		    <artifactId>mockito-core</artifactId> -->
+<!-- 		    <version>2.15.0</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 		    <groupId>org.mockito</groupId> -->
+<!-- 		    <artifactId>mockito-inline</artifactId> -->
+<!-- 		    <version>2.15.0</version> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.restdocs</groupId>
 			<artifactId>spring-restdocs-mockmvc</artifactId>
